lesson 01 - improved code

--- a/introducao/variaveis.html
+++ b/introducao/variaveis.html
@@ -6,7 +6,13 @@
 	<meta name="description" content="HTML criado para a 			aula de introdução ao JavaScript do Rodrigo Branas">
 </head>
 <body>
+	<p id="nome"></p>
 	<p id="top10"></p>
+	<p id="scope"></p>
+	<p id="person"></p>
+	<p id="numberCode"></p>
+	<p id="a"></p>
+	<p id="language"></p>
 	<script src="variaveis.js"></script>
 	<!--No caso acima, a declaração do uso do arquivo .js deve ser realizado após o elemento alvo das operações -->
 </body>
