--- a/number/number.html
+++ b/number/number.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-	<head>
-		<meta charset="utf-8">
-	</head>
-	<body>
-		<h4>Uso de JavaScript. Recomendado ver o arquivo number.js</h4>
-		<p>Trablhando com o número 10</p>
-		<p>Número Puro:</p>
-		<p id="numeroPuro"></p>
-		<p>Número elevado a 2:</p>
-		<p id="exponencial"></p>
-		<p>Fixando casas decimais para o número:</p>
-		<p id="fixado"></p>
-		<p>Convertendo o número para String:</p>
-		<p id="convertido"></p>
-		<p>Usando o método valueOf:</p>
-		<p id="retornoValor"></p>
-		<script src="number.js"></script>
-	</body>
+
+<head>
+	<title>Usando Números - JavaScript</title>
+	<meta charset="utf-8">
+</head>
+
+<body>
+	<h4>Uso de JavaScript. Recomendado ver o arquivo number.js</h4>
+	<p>Trablhando com o número 10</p>
+	<p>Número Puro:</p>
+	<p id="numeroPuro"></p>
+	<p>Número elevado a 2:</p>
+	<p id="exponencial"></p>
+	<p>Fixando casas decimais para o número:</p>
+	<p id="fixado"></p>
+	<p>Convertendo o número para String:</p>
+	<p id="convertido"></p>
+	<p>Usando o método valueOf:</p>
+	<p id="retornoValor"></p>
+	<script src="number.js"></script>
+</body>
+
 </html>
